--- a/E2E.UWP/E2E.UWP.csproj
+++ b/E2E.UWP/E2E.UWP.csproj
@@ -107,9 +107,14 @@
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Objects\LookingDirectionObject.cs" />
+    <Compile Include="Pages\NursingPage.xaml.cs">
+      <DependentUpon>NursingPage.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModels\BaseViewModel.cs" />
     <Compile Include="ViewModels\MainViewModel.cs" />
+    <Compile Include="WebServices\AzureWebService.cs" />
+    <Compile Include="WebServices\BreakWordWebService.cs" />
     <Compile Include="WebServices\FaceWebService.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -136,6 +141,10 @@
     <Page Include="MainPage.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
+    </Page>
+    <Page Include="Pages\NursingPage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
     </Page>
   </ItemGroup>
   <ItemGroup />
