--- a/E2E.UWP/E2E.UWP.csproj
+++ b/E2E.UWP/E2E.UWP.csproj
@@ -113,7 +113,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModels\BaseViewModel.cs" />
     <Compile Include="ViewModels\MainViewModel.cs" />
-    <Compile Include="WebServices\AzureWebService.cs" />
+    <Compile Include="WebServices\AzureHttpClient.cs" />
     <Compile Include="WebServices\BreakWordWebService.cs" />
     <Compile Include="WebServices\FaceWebService.cs" />
   </ItemGroup>
